fix(A11y): improve the color contrast on the no scripting indicator

--- a/src/styles/layouts.styl
+++ b/src/styles/layouts.styl
@@ -10,6 +10,8 @@ flex()
     gap: var(--space, 1.5em)
 .grow-2
     flex-grow: 2
+.no-shrink
+    flex-shrink: 0
 
 .segragator
     flex-flow: var(--direction, row) var(--wrap, nowrap)
