--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -13,7 +13,6 @@ inlineFlex(gap=.5em)
     gap: var(--items-space, gap)
     align-items: center
 leftArrowDeco(size, ratio, color)
-    content: ""
     decoElt(size, ratio, color)
     clip-path: url(#arrow_left)
 
@@ -35,18 +34,19 @@ darkShade()
     --fill-items-box: hsl(233, 30%, 21%)
     --fill-amount-box: hsl(228, 29%, 7)
     --color-disabled: hsla(231, 67%, 99%, 0.6)
+    --theme-clip: url(#light_mode)
 
 @css {
 :root {
 	--system-color-softBlue: hsl(252, 94%, 67%);
 	--system-color-lightBlue: hsl(252, 100%, 73%);
 	--system-color-softRed: hsl(0, 80%, 63%);
-	--system-color-lightRed: hsl(0, 10%0, 80%);
+	--system-color-lightRed: hsl(0, 100%, 80%);
 	--system-color-limeGreen: hsl(160, 67%, 52%);
 	--system-color-pureOrange: hsl(34, 90%, 69%);
 	--system-color-grayishBlue: hsl(231, 20%, 27%);
 	--system-color-lightGrayishBlue: hsl(231, 67%, 99%);
-	--system-color-darkBlue: hsl(231, 28% 7);
+	--system-color-darkBlue: hsl(231, 28%, 7%);
 	--system-color-lightPurple: hsl(231, 73%, 93%);
 	--system-color-softPurple: hsl(231, 37%, 63%);
 	--system-color-darkPurple: hsl(233, 31%, 17%);
@@ -68,6 +68,8 @@ darkShade()
 	--system-text-body: 0.8125rem;
 	--system-color-disabled: var(--color-disabled, hsla(233, 31%, 17%, 0.6));
     --invoice-grid: "ref . name" ".  .   ." 1rem "date . status" "total . status" / 1fr .5fr 1fr;
+
+    --system-theme-clip: var(--theme-clip, url(#night_mode))
 }
 }
 
@@ -157,6 +159,7 @@ section
     color: var(--color-labelText, hsl(231, 20, 61))
 [class*="btn"]
     --radius: 1.5rem
+    --space: .25em
     font-weight: 900
     text-transform: capitalize
     font-size: clamp(.75em, 4cqi, 1em)
@@ -206,15 +209,19 @@ section
 	color: var(--color-text-hover, var(--system-color-lightBlue))
 
 [data-icon]
-    inlineFlex()
     &:disabled
         --deco-fill: currentColor
         opacity: 0.6
         color: var(--system-color-disabled)
+    &::before,
+    &::after
+        content: ""
+        display: inline-block
+        flex-shrink: 0
 
 [data-icon="arrow_right"]
     --icon-transform: rotate(180deg)
-    --i-flow: row-reverse nowrap
+    --row-dir: row-reverse
     --hover-transform: rotate(180deg) translateX(0.5em)
 [data-icon="arrow_left"]
     --hover-transform: translateX(0.5em)
@@ -227,7 +234,6 @@ section
     --space: 0.1em
     cursor: pointer
     &::after
-        content: ""
         decoElt(1em, 0.6, var(--system-color-softBlue))
         clip-path: url(#arrow_down)
         transform: var(--transformation, none)
@@ -237,9 +243,12 @@ section
 [data-icon="add-circle"]
     --min-padding: .75em clamp(.5em, 2vw, 1.5em) .75em .5em
     &::before
-        content: ""
         decoElt(2em, 1, currentColor)
         clip-path: url(#add-circle)
+[data-icon="warning"]::before
+    decoElt(1.5em, 1, currentColor)
+    clip-path: url(#warning)
+
 
 [data-status="pending"]
     --status-fill: var(--system-color-pureOrange)
@@ -281,7 +290,7 @@ section
         border-radius: 1.25em 0 1.25em 0
 
 #status-form
-    --min-padding: 1.5em
+    --min-padding: clamp(0.5em, 4vi, 1.5em)
     font-weight: bold
     border-radius: .5em
     box-shadow: 0 4px 8px 0 var(--system-color-shadow)
@@ -289,7 +298,7 @@ section
     position: absolute
     inset-block-start: 110%
     inset-inline: -20%
-    min-inline-size: 12rem
+    min-inline-size: @css{min(12rem, 50vi)}
     z-index: 1
     opacity: 0
     [open] &
@@ -330,11 +339,17 @@ section
         margin: 0
         opacity: 0
 
+.theme-switch:is(:focus, :hover)
+    --icon-fill: var(--system-color-lightPurple)
 .theme-switch
     border-inline-end: 1px solid var(--system-color-grayishBlue)
-    &:hover,
-    &:focus
-        --icon-fill: var(--system-color-lightPurple)
+    &::before
+        content: ""
+        display: inline-block
+        inline-size: 32px
+        aspect-ratio: 1
+        background-color: var(--icon-fill, currentColor)
+        clip-path: var(--system-theme-clip)
 .banner
     --alignment: stretch
     --icon-fill: var(--system-color-softPurple)
@@ -414,13 +429,15 @@ section
     --min-padding: var(--status-padding)
     --color-text: var(--status-text, inherit)
     --color-fill: var(--status-fill, inherit)
+    display: inline-flex
+    align-items: center
+    gap: .25em
     text-transform: capitalize
     font-weight: bold
-    inlineFlex()
     &::before
         content: ""
         display: inline-block
-        decoElt(.5rem, 1, currentColor)
+        decoElt(.5em, 1, currentColor)
         border-radius: 50%
 
 .invoice__status
@@ -595,12 +612,15 @@ date-picker
             inset: var(--inset-before, auto 0 calc(.85em - 1px))
             background-image: var(--deco-img, linear-gradient(var(--gradient-dir, to right), var(--deco-color) calc(50% - .85em - 2px), transparent 0 calc(50% + .85em + 2px), var(--deco-color) 0))
 
-noscript
+noscript[data-status]
     --min-padding: 1em
     --radius: .5em
+    --color-text: var(--status-text, currentColor)
+    --color-text-hover: var(--system-color-darkPurple)
+    --space: .5em
     margin-block-start: .5em
     margin-inline: .5em
-    display: block
+    background-color: var(--system-color-lightRed)
 
 @media screen and (min-width: 480px)
     :root
@@ -676,7 +696,7 @@ noscript
     body
         --y-offset: 0px
         display: grid
-        grid-template: "nav . . ." 72px "nav . main ." calc(100lvb - 72px) / 72px 1fr minmax(clamp(688px, 60vi, 719px), 2.5fr) 1fr
+        grid-template: "nav . . ." 72px "nav . main ." calc(100lvb - 72px) / 72px 1fr minmax(clamp(618px, 60vi, 719px), 2.5fr) 1fr
         & > main
             grid-area: main
     .drawer
